# transcribe-search

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
tests/: test_transcription.py  test_utils.py
transcribe/: __main__.py  commands.py  config.py  errors.py  main.py  metadata.py  transcriber.py  transcription.py  utils.py  video.py
